--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="half-width">
             <h1>Stay safe with</h1>
             <h1>Go<span class="orange-color">Corona</span></h1>
-            <p>ঘুমানোর আনন্দ আর ভোর দেখার আনন্দ একসাথে পাওয়া যায় না।কেউ
+            <p class="titel" style="font-size:160%;color:blue;">ঘুমানোর আনন্দ আর ভোর দেখার আনন্দ একসাথে পাওয়া যায় না।কেউ
                 কারও...অশান্তির কারণ না হোক!
                 মানুষের জীবন ভালোবাসাপূর্ণ হোক না হোক,শান্তিপূর্ণ হোক...</p>
             <a class="link-button" target="_blank" href="https://www.staysafe.ph/">STAYSAFE</a>
@@ -111,8 +111,9 @@
         </div>
 
     </section>
-
+    <hr>
     <footer>
+        <h3 class="titel" style="color:blue;">Misson 2022</h3>
         <p>© Manik Lal Mondal, Assignment-(1) html and css github World! 2022, a Programming initiative.</p>
     </footer>
 </body>
